projects/01-goals-app-production/src/manifests/04-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goals-frontend-svc
  namespace: goals-production
spec:
  selector:
    app: goals-frontend
  ports:
    - port: 3000
      targetPort: 3000
